// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ArrowContainer /> with \`borderColor\` prop matches with snapshot 1`] = `
.c0 {
  position: relative;
  z-index: 1;
  box-sizing: border-box;
  padding: var(--k-ArrowContainer-padding);
  background-color: var(--k-ArrowContainer-color);
  border-radius: var(--k-ArrowContainer-borderRadius);
  border: var(--k-ArrowContainer-borderWidth) solid var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--hasShadow {
  box-shadow: 0 0.625rem 1.25rem 0 rgba(0,0,0,0.2);
}

.c0 .k-ArrowContainer__arrow {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: var(--k-ArrowContainer-arrowSize) solid transparent;
}

.c0.k-ArrowContainer--hasBorder .k-ArrowContainer__arrow::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow {
  top: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-bottom-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow::before {
  top: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-bottom-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow {
  bottom: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-top-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow::before {
  bottom: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-top-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow {
  right: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-left-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow::before {
  right: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-left-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow {
  left: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-right-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow::before {
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  left: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-right-color: var(--k-ArrowContainer-borderColor);
}

<div
  className="c0 k-ArrowContainer k-ArrowContainer--left"
  style={
    Object {
      "--k-ArrowContainer-arrowDistance": "1.25rem",
      "--k-ArrowContainer-arrowSize": "0.625rem",
      "--k-ArrowContainer-borderColor": "#1CAFE1",
      "--k-ArrowContainer-borderDistance": 0,
      "--k-ArrowContainer-borderRadius": 0,
      "--k-ArrowContainer-borderSize": "0.625rem",
      "--k-ArrowContainer-borderWidth": 0,
      "--k-ArrowContainer-color": "#f6f6f6",
      "--k-ArrowContainer-padding": "1.25rem",
    }
  }
>
  Foobar
  <span
    className="k-ArrowContainer__arrow"
  />
</div>
`;

exports[`<ArrowContainer /> with \`borderRadius\` prop matches with snapshot 1`] = `
.c0 {
  position: relative;
  z-index: 1;
  box-sizing: border-box;
  padding: var(--k-ArrowContainer-padding);
  background-color: var(--k-ArrowContainer-color);
  border-radius: var(--k-ArrowContainer-borderRadius);
  border: var(--k-ArrowContainer-borderWidth) solid var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--hasShadow {
  box-shadow: 0 0.625rem 1.25rem 0 rgba(0,0,0,0.2);
}

.c0 .k-ArrowContainer__arrow {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: var(--k-ArrowContainer-arrowSize) solid transparent;
}

.c0.k-ArrowContainer--hasBorder .k-ArrowContainer__arrow::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow {
  top: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-bottom-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow::before {
  top: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-bottom-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow {
  bottom: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-top-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow::before {
  bottom: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-top-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow {
  right: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-left-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow::before {
  right: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-left-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow {
  left: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-right-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow::before {
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  left: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-right-color: var(--k-ArrowContainer-borderColor);
}

<div
  className="c0 k-ArrowContainer k-ArrowContainer--left"
  style={
    Object {
      "--k-ArrowContainer-arrowDistance": "1.25rem",
      "--k-ArrowContainer-arrowSize": "0.625rem",
      "--k-ArrowContainer-borderColor": "#eee",
      "--k-ArrowContainer-borderDistance": 0,
      "--k-ArrowContainer-borderRadius": "0.25rem",
      "--k-ArrowContainer-borderSize": "0.625rem",
      "--k-ArrowContainer-borderWidth": 0,
      "--k-ArrowContainer-color": "#f6f6f6",
      "--k-ArrowContainer-padding": "1.25rem",
    }
  }
>
  Foobar
  <span
    className="k-ArrowContainer__arrow"
  />
</div>
`;

exports[`<ArrowContainer /> with \`borderWidth\` prop matches with snapshot 1`] = `
.c0 {
  position: relative;
  z-index: 1;
  box-sizing: border-box;
  padding: var(--k-ArrowContainer-padding);
  background-color: var(--k-ArrowContainer-color);
  border-radius: var(--k-ArrowContainer-borderRadius);
  border: var(--k-ArrowContainer-borderWidth) solid var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--hasShadow {
  box-shadow: 0 0.625rem 1.25rem 0 rgba(0,0,0,0.2);
}

.c0 .k-ArrowContainer__arrow {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: var(--k-ArrowContainer-arrowSize) solid transparent;
}

.c0.k-ArrowContainer--hasBorder .k-ArrowContainer__arrow::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow {
  top: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-bottom-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow::before {
  top: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-bottom-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow {
  bottom: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-top-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow::before {
  bottom: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-top-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow {
  right: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-left-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow::before {
  right: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-left-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow {
  left: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-right-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow::before {
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  left: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-right-color: var(--k-ArrowContainer-borderColor);
}

<div
  className="c0 k-ArrowContainer k-ArrowContainer--left k-ArrowContainer--hasBorder"
  style={
    Object {
      "--k-ArrowContainer-arrowDistance": "1.25rem",
      "--k-ArrowContainer-arrowSize": "0.625rem",
      "--k-ArrowContainer-borderColor": "#eee",
      "--k-ArrowContainer-borderDistance": "0.3125rem",
      "--k-ArrowContainer-borderRadius": 0,
      "--k-ArrowContainer-borderSize": "0.9375rem",
      "--k-ArrowContainer-borderWidth": "0.1875rem",
      "--k-ArrowContainer-color": "#f6f6f6",
      "--k-ArrowContainer-padding": "1.25rem",
    }
  }
>
  Foobar
  <span
    className="k-ArrowContainer__arrow"
  />
</div>
`;

exports[`<ArrowContainer /> with \`centered\` prop matches with snapshot 1`] = `
.c0 {
  position: relative;
  z-index: 1;
  box-sizing: border-box;
  padding: var(--k-ArrowContainer-padding);
  background-color: var(--k-ArrowContainer-color);
  border-radius: var(--k-ArrowContainer-borderRadius);
  border: var(--k-ArrowContainer-borderWidth) solid var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--hasShadow {
  box-shadow: 0 0.625rem 1.25rem 0 rgba(0,0,0,0.2);
}

.c0 .k-ArrowContainer__arrow {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: var(--k-ArrowContainer-arrowSize) solid transparent;
}

.c0.k-ArrowContainer--hasBorder .k-ArrowContainer__arrow::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow {
  top: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-bottom-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow::before {
  top: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-bottom-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow {
  bottom: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-top-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow::before {
  bottom: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-top-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow {
  right: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-left-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow::before {
  right: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-left-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow {
  left: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-right-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow::before {
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  left: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-right-color: var(--k-ArrowContainer-borderColor);
}

<div
  className="c0 k-ArrowContainer k-ArrowContainer--left"
  style={
    Object {
      "--k-ArrowContainer-arrowDistance": "calc(50% - 0.625rem)",
      "--k-ArrowContainer-arrowSize": "0.625rem",
      "--k-ArrowContainer-borderColor": "#eee",
      "--k-ArrowContainer-borderDistance": 0,
      "--k-ArrowContainer-borderRadius": 0,
      "--k-ArrowContainer-borderSize": "0.625rem",
      "--k-ArrowContainer-borderWidth": 0,
      "--k-ArrowContainer-color": "#f6f6f6",
      "--k-ArrowContainer-padding": "1.25rem",
    }
  }
>
  Foobar
  <span
    className="k-ArrowContainer__arrow"
  />
</div>
`;

exports[`<ArrowContainer /> with \`color\` prop matches with snapshot 1`] = `
.c0 {
  position: relative;
  z-index: 1;
  box-sizing: border-box;
  padding: var(--k-ArrowContainer-padding);
  background-color: var(--k-ArrowContainer-color);
  border-radius: var(--k-ArrowContainer-borderRadius);
  border: var(--k-ArrowContainer-borderWidth) solid var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--hasShadow {
  box-shadow: 0 0.625rem 1.25rem 0 rgba(0,0,0,0.2);
}

.c0 .k-ArrowContainer__arrow {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: var(--k-ArrowContainer-arrowSize) solid transparent;
}

.c0.k-ArrowContainer--hasBorder .k-ArrowContainer__arrow::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow {
  top: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-bottom-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow::before {
  top: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-bottom-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow {
  bottom: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-top-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow::before {
  bottom: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-top-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow {
  right: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-left-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow::before {
  right: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-left-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow {
  left: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-right-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow::before {
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  left: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-right-color: var(--k-ArrowContainer-borderColor);
}

<div
  className="c0 k-ArrowContainer k-ArrowContainer--left"
  style={
    Object {
      "--k-ArrowContainer-arrowDistance": "1.25rem",
      "--k-ArrowContainer-arrowSize": "0.625rem",
      "--k-ArrowContainer-borderColor": "#eee",
      "--k-ArrowContainer-borderDistance": 0,
      "--k-ArrowContainer-borderRadius": 0,
      "--k-ArrowContainer-borderSize": "0.625rem",
      "--k-ArrowContainer-borderWidth": 0,
      "--k-ArrowContainer-color": "#ff0000",
      "--k-ArrowContainer-padding": "1.25rem",
    }
  }
>
  Foobar
  <span
    className="k-ArrowContainer__arrow"
  />
</div>
`;

exports[`<ArrowContainer /> with \`distance\` and \`distanceAsPercentage\` prop matches with snapshot 1`] = `
.c0 {
  position: relative;
  z-index: 1;
  box-sizing: border-box;
  padding: var(--k-ArrowContainer-padding);
  background-color: var(--k-ArrowContainer-color);
  border-radius: var(--k-ArrowContainer-borderRadius);
  border: var(--k-ArrowContainer-borderWidth) solid var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--hasShadow {
  box-shadow: 0 0.625rem 1.25rem 0 rgba(0,0,0,0.2);
}

.c0 .k-ArrowContainer__arrow {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: var(--k-ArrowContainer-arrowSize) solid transparent;
}

.c0.k-ArrowContainer--hasBorder .k-ArrowContainer__arrow::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow {
  top: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-bottom-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow::before {
  top: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-bottom-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow {
  bottom: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-top-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow::before {
  bottom: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-top-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow {
  right: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-left-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow::before {
  right: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-left-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow {
  left: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-right-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow::before {
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  left: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-right-color: var(--k-ArrowContainer-borderColor);
}

<div
  className="c0 k-ArrowContainer k-ArrowContainer--left"
  style={
    Object {
      "--k-ArrowContainer-arrowDistance": "calc(30% - 0.625rem)",
      "--k-ArrowContainer-arrowSize": "0.625rem",
      "--k-ArrowContainer-borderColor": "#eee",
      "--k-ArrowContainer-borderDistance": 0,
      "--k-ArrowContainer-borderRadius": 0,
      "--k-ArrowContainer-borderSize": "0.625rem",
      "--k-ArrowContainer-borderWidth": 0,
      "--k-ArrowContainer-color": "#f6f6f6",
      "--k-ArrowContainer-padding": "1.25rem",
    }
  }
>
  Foobar
  <span
    className="k-ArrowContainer__arrow"
  />
</div>
`;

exports[`<ArrowContainer /> with \`distance\` prop matches with snapshot 1`] = `
.c0 {
  position: relative;
  z-index: 1;
  box-sizing: border-box;
  padding: var(--k-ArrowContainer-padding);
  background-color: var(--k-ArrowContainer-color);
  border-radius: var(--k-ArrowContainer-borderRadius);
  border: var(--k-ArrowContainer-borderWidth) solid var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--hasShadow {
  box-shadow: 0 0.625rem 1.25rem 0 rgba(0,0,0,0.2);
}

.c0 .k-ArrowContainer__arrow {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: var(--k-ArrowContainer-arrowSize) solid transparent;
}

.c0.k-ArrowContainer--hasBorder .k-ArrowContainer__arrow::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow {
  top: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-bottom-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow::before {
  top: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-bottom-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow {
  bottom: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-top-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow::before {
  bottom: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-top-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow {
  right: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-left-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow::before {
  right: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-left-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow {
  left: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-right-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow::before {
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  left: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-right-color: var(--k-ArrowContainer-borderColor);
}

<div
  className="c0 k-ArrowContainer k-ArrowContainer--left"
  style={
    Object {
      "--k-ArrowContainer-arrowDistance": "1.875rem",
      "--k-ArrowContainer-arrowSize": "0.625rem",
      "--k-ArrowContainer-borderColor": "#eee",
      "--k-ArrowContainer-borderDistance": 0,
      "--k-ArrowContainer-borderRadius": 0,
      "--k-ArrowContainer-borderSize": "0.625rem",
      "--k-ArrowContainer-borderWidth": 0,
      "--k-ArrowContainer-color": "#f6f6f6",
      "--k-ArrowContainer-padding": "1.25rem",
    }
  }
>
  Foobar
  <span
    className="k-ArrowContainer__arrow"
  />
</div>
`;

exports[`<ArrowContainer /> with \`position\` prop matches with snapshot 1`] = `
.c0 {
  position: relative;
  z-index: 1;
  box-sizing: border-box;
  padding: var(--k-ArrowContainer-padding);
  background-color: var(--k-ArrowContainer-color);
  border-radius: var(--k-ArrowContainer-borderRadius);
  border: var(--k-ArrowContainer-borderWidth) solid var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--hasShadow {
  box-shadow: 0 0.625rem 1.25rem 0 rgba(0,0,0,0.2);
}

.c0 .k-ArrowContainer__arrow {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: var(--k-ArrowContainer-arrowSize) solid transparent;
}

.c0.k-ArrowContainer--hasBorder .k-ArrowContainer__arrow::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow {
  top: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-bottom-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow::before {
  top: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-bottom-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow {
  bottom: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-top-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow::before {
  bottom: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-top-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow {
  right: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-left-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow::before {
  right: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-left-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow {
  left: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-right-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow::before {
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  left: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-right-color: var(--k-ArrowContainer-borderColor);
}

<div
  className="c0 k-ArrowContainer k-ArrowContainer--bottom"
  style={
    Object {
      "--k-ArrowContainer-arrowDistance": "1.25rem",
      "--k-ArrowContainer-arrowSize": "0.625rem",
      "--k-ArrowContainer-borderColor": "#eee",
      "--k-ArrowContainer-borderDistance": 0,
      "--k-ArrowContainer-borderRadius": 0,
      "--k-ArrowContainer-borderSize": "0.625rem",
      "--k-ArrowContainer-borderWidth": 0,
      "--k-ArrowContainer-color": "#f6f6f6",
      "--k-ArrowContainer-padding": "1.25rem",
    }
  }
>
  Foobar
  <span
    className="k-ArrowContainer__arrow"
  />
</div>
`;

exports[`<ArrowContainer /> with \`shadow\` prop matches with snapshot 1`] = `
.c0 {
  position: relative;
  z-index: 1;
  box-sizing: border-box;
  padding: var(--k-ArrowContainer-padding);
  background-color: var(--k-ArrowContainer-color);
  border-radius: var(--k-ArrowContainer-borderRadius);
  border: var(--k-ArrowContainer-borderWidth) solid var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--hasShadow {
  box-shadow: 0 0.625rem 1.25rem 0 rgba(0,0,0,0.2);
}

.c0 .k-ArrowContainer__arrow {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: var(--k-ArrowContainer-arrowSize) solid transparent;
}

.c0.k-ArrowContainer--hasBorder .k-ArrowContainer__arrow::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow {
  top: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-bottom-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow::before {
  top: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-bottom-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow {
  bottom: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-top-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow::before {
  bottom: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-top-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow {
  right: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-left-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow::before {
  right: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-left-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow {
  left: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-right-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow::before {
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  left: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-right-color: var(--k-ArrowContainer-borderColor);
}

<div
  className="c0 k-ArrowContainer k-ArrowContainer--left k-ArrowContainer--hasShadow"
  style={
    Object {
      "--k-ArrowContainer-arrowDistance": "1.25rem",
      "--k-ArrowContainer-arrowSize": "0.625rem",
      "--k-ArrowContainer-borderColor": "#eee",
      "--k-ArrowContainer-borderDistance": 0,
      "--k-ArrowContainer-borderRadius": 0,
      "--k-ArrowContainer-borderSize": "0.625rem",
      "--k-ArrowContainer-borderWidth": 0,
      "--k-ArrowContainer-color": "#f6f6f6",
      "--k-ArrowContainer-padding": "1.25rem",
    }
  }
>
  Foobar
  <span
    className="k-ArrowContainer__arrow"
  />
</div>
`;

exports[`<ArrowContainer /> with \`size\` prop matches with snapshot 1`] = `
.c0 {
  position: relative;
  z-index: 1;
  box-sizing: border-box;
  padding: var(--k-ArrowContainer-padding);
  background-color: var(--k-ArrowContainer-color);
  border-radius: var(--k-ArrowContainer-borderRadius);
  border: var(--k-ArrowContainer-borderWidth) solid var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--hasShadow {
  box-shadow: 0 0.625rem 1.25rem 0 rgba(0,0,0,0.2);
}

.c0 .k-ArrowContainer__arrow {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: var(--k-ArrowContainer-arrowSize) solid transparent;
}

.c0.k-ArrowContainer--hasBorder .k-ArrowContainer__arrow::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow {
  top: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-bottom-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow::before {
  top: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-bottom-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow {
  bottom: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-top-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow::before {
  bottom: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-top-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow {
  right: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-left-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow::before {
  right: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-left-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow {
  left: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-right-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow::before {
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  left: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-right-color: var(--k-ArrowContainer-borderColor);
}

<div
  className="c0 k-ArrowContainer k-ArrowContainer--left"
  style={
    Object {
      "--k-ArrowContainer-arrowDistance": "1.25rem",
      "--k-ArrowContainer-arrowSize": "1.25rem",
      "--k-ArrowContainer-borderColor": "#eee",
      "--k-ArrowContainer-borderDistance": 0,
      "--k-ArrowContainer-borderRadius": 0,
      "--k-ArrowContainer-borderSize": "1.25rem",
      "--k-ArrowContainer-borderWidth": 0,
      "--k-ArrowContainer-color": "#f6f6f6",
      "--k-ArrowContainer-padding": "1.25rem",
    }
  }
>
  Foobar
  <span
    className="k-ArrowContainer__arrow"
  />
</div>
`;

exports[`<ArrowContainer /> with default props matches with snapshot 1`] = `
.c0 {
  position: relative;
  z-index: 1;
  box-sizing: border-box;
  padding: var(--k-ArrowContainer-padding);
  background-color: var(--k-ArrowContainer-color);
  border-radius: var(--k-ArrowContainer-borderRadius);
  border: var(--k-ArrowContainer-borderWidth) solid var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--hasShadow {
  box-shadow: 0 0.625rem 1.25rem 0 rgba(0,0,0,0.2);
}

.c0 .k-ArrowContainer__arrow {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: var(--k-ArrowContainer-arrowSize) solid transparent;
}

.c0.k-ArrowContainer--hasBorder .k-ArrowContainer__arrow::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow {
  top: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-bottom-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow::before {
  top: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-bottom-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow {
  bottom: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-top-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow::before {
  bottom: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-top-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow {
  right: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-left-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow::before {
  right: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-left-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow {
  left: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-right-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow::before {
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  left: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-right-color: var(--k-ArrowContainer-borderColor);
}

<div
  className="c0 k-ArrowContainer k-ArrowContainer--left"
  style={
    Object {
      "--k-ArrowContainer-arrowDistance": "1.25rem",
      "--k-ArrowContainer-arrowSize": "0.625rem",
      "--k-ArrowContainer-borderColor": "#eee",
      "--k-ArrowContainer-borderDistance": 0,
      "--k-ArrowContainer-borderRadius": 0,
      "--k-ArrowContainer-borderSize": "0.625rem",
      "--k-ArrowContainer-borderWidth": 0,
      "--k-ArrowContainer-color": "#f6f6f6",
      "--k-ArrowContainer-padding": "1.25rem",
    }
  }
>
  Foobar
  <span
    className="k-ArrowContainer__arrow"
  />
</div>
`;

exports[`<ArrowContainer /> with other props matches with snapshot 1`] = `
.c0 {
  position: relative;
  z-index: 1;
  box-sizing: border-box;
  padding: var(--k-ArrowContainer-padding);
  background-color: var(--k-ArrowContainer-color);
  border-radius: var(--k-ArrowContainer-borderRadius);
  border: var(--k-ArrowContainer-borderWidth) solid var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--hasShadow {
  box-shadow: 0 0.625rem 1.25rem 0 rgba(0,0,0,0.2);
}

.c0 .k-ArrowContainer__arrow {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border: var(--k-ArrowContainer-arrowSize) solid transparent;
}

.c0.k-ArrowContainer--hasBorder .k-ArrowContainer__arrow::before {
  content: '';
  display: block;
  position: absolute;
  width: 0;
  height: 0;
  z-index: -1;
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow {
  top: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-bottom-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--top .k-ArrowContainer__arrow::before {
  top: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-bottom-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow {
  bottom: calc(var(--k-ArrowContainer-arrowSize) * -2);
  left: var(--k-ArrowContainer-arrowDistance);
  border-top-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--bottom .k-ArrowContainer__arrow::before {
  bottom: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  left: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-top-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow {
  right: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-left-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--right .k-ArrowContainer__arrow::before {
  right: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-left-color: var(--k-ArrowContainer-borderColor);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow {
  left: calc(var(--k-ArrowContainer-arrowSize) * -2);
  top: var(--k-ArrowContainer-arrowDistance);
  border-right-color: var(--k-ArrowContainer-color);
}

.c0.k-ArrowContainer--left .k-ArrowContainer__arrow::before {
  top: calc(var(--k-ArrowContainer-borderSize) * -1);
  left: calc( ( var(--k-ArrowContainer-borderSize) + var(--k-ArrowContainer-borderDistance) ) * -1 );
  border: var(--k-ArrowContainer-borderSize) solid transparent;
  border-right-color: var(--k-ArrowContainer-borderColor);
}

<article
  className="c0 k-ArrowContainer k-u-example-class k-ArrowContainer--left"
  style={
    Object {
      "--k-ArrowContainer-arrowDistance": "1.25rem",
      "--k-ArrowContainer-arrowSize": "0.625rem",
      "--k-ArrowContainer-borderColor": "#eee",
      "--k-ArrowContainer-borderDistance": 0,
      "--k-ArrowContainer-borderRadius": 0,
      "--k-ArrowContainer-borderSize": "0.625rem",
      "--k-ArrowContainer-borderWidth": 0,
      "--k-ArrowContainer-color": "#f6f6f6",
      "--k-ArrowContainer-padding": "1.25rem",
    }
  }
>
  Foobar
  <span
    className="k-ArrowContainer__arrow"
  />
</article>
`;
